--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -22,6 +22,7 @@
 \newacronym{LED}{LED}{light-emitting diode}
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
 \newacronym{ITR}{ITR}{information transfer rate}
+\newacronym{CPU}{CPU}{central processing unit}
 
 % Glossary
 
