--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -61,8 +61,8 @@
 % Changing some title names
 % more http://tex.stackexchange.com/questions/82993/how-to-change-the-name-of-document-elements-like-figure-contents-bibliogr
 
-\renewcommand{\bibname}{References}
-\renewcommand{\contentsname}{Table of contents}
+\addto{\captionsenglish}{\renewcommand{\bibname}{References}}
+\addto{\captionsenglish}{\renewcommand{\contentsname}{Table of contents}}
 
 % Exact page size from template
 
